[tool.poetry]
name = "learning-base"
version = "0.1.0"
description = ""
authors = ["fidaibird"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ucimlrepo = "^0.0.7"
matplotlib = "^3.10.3"
torch = "^2.7.0"
torchvision = "^0.22.0"
scipy = "^1.15.3"
xgboost = "^3.0.2"
scikit-learn = "^1.6.1"
torchtext = "^0.18.0"
pytorch-lightning = "^2.5.1.post0"
jupyterlab = "^4.4.3"
ipykernel = "^6.29.5"
batchup = "^0.2.3"
tiktoken = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
